<resources>
    <string name="app_name">Digimind</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="question1">What do you want to remember to do?</string>
    <string name="question2">When do you want to do it?</string>
    <string name="question3">At what time?</string>
    <string name="hint">Take my pill</string>
    <string name="hint2">Set time</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

</resources>
